--- a/Scryber.Core.OpenType/Scryber.Core.OpenType.csproj
+++ b/Scryber.Core.OpenType/Scryber.Core.OpenType.csproj
@@ -31,4 +31,7 @@ This is the base type for reading OpenType TTF and TTC font files used in scrybe
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Scryber.Core.Compression.BrotliSharpLib\Scryber.Core.Compression.BrotliSharpLib.csproj" />
+  </ItemGroup>
 </Project>
