--- a/Scryber.Core.OpenType/Scryber.Core.OpenType.csproj
+++ b/Scryber.Core.OpenType/Scryber.Core.OpenType.csproj
@@ -33,4 +33,16 @@ This is the base type for reading OpenType, TTF and TTC font files used in scryb
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Remove="OpenType\Woff2\" />
+    <None Remove="OpenType\TTF\" />
+    <None Remove="OpenType\Woff\" />
+    <None Remove="OpenType\Utiltity\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="OpenType\Woff2\" />
+    <Folder Include="OpenType\TTF\" />
+    <Folder Include="OpenType\Woff\" />
+    <Folder Include="OpenType\Utility\" />
+  </ItemGroup>
 </Project>
